[gd_scene load_steps=2 format=2]

[ext_resource path="res://CanvasLayer.gd" type="Script" id=1]

[node name="Main" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="HTTPPodRequest" type="HTTPRequest" parent="."]

[node name="HTTPReplicaRequest" type="HTTPRequest" parent="."]

[node name="Clock" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Poller" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Connex" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -14.0

[node name="Info" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
[connection signal="timeout" from="Clock" to="." method="_on_Clock_timeout"]
[connection signal="timeout" from="Poller" to="." method="_on_Poller_timeout"]
